# StockGraph

./: .gitignore  DEMO_SCRIPT.md  README.md  deploy_python_env.sh  dev_start.sh  pyproject.toml  run_daily_sync.sh  run_full_sync.sh
.github/workflows/: pages.yml  sync_news.yml
data/market_overview/: hot_daily_20260601.json  hot_daily_20260602.json  hot_daily_20260603.json  hot_daily_20260604.json  hot_daily_20260605.json  hot_daily_20260608.json  hot_daily_20260609.json  hot_daily_20260610.json  hot_daily_20260611.json  hot_daily_20260612.json  hot_daily_20260615.json  hot_daily_20260616.json  hot_daily_20260617.json  hot_daily_20260618.json  hot_daily_20260622.json  hot_daily_20260623.json  hot_daily_20260624.json  hot_daily_20260625.json  hot_daily_20260626.json  hot_daily_20260629.json  hot_daily_20260630.json  source_runtime_state.json  stock_daily_20260601.json  stock_daily_20260602.json  stock_daily_20260603.json  stock_daily_20260604.json  stock_daily_20260605.json  stock_daily_20260608.json  stock_daily_20260609.json  (+14 more)
docs/: architecture.md  repo_maintenance.md
scripts/: analyze_dragon_tiger.py  api_server.py  backfill_from_json.py  backfill_history.py  build_dev_index.py  build_graph_snapshots.py  build_pages_site.py  build_unified_app.py  generate_dashboards.py  init_db.py  routine_daily_sync.py  sync_dragon_tiger.py  sync_market_overview.py  sync_news.py  sync_stock_codes.py  sync_stock_locations.py  sync_stock_locations_batch.sh
source/: README.md  dragon_tiger_scraper.py  generate_comprehensive_html.py  trader_alias.py  龙虎榜查询.html  龙虎榜综合分析.html
(+113 files in other folders)
