[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockgraph"
version = "0.1.0"
description = "A-share market intelligence workspace with extensible ingestion, graph analysis, and AI analysis architecture."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.16.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
